# api-deploy

./: README.md  heroku.yml  pyproject.toml  requirements.txt
movies_project/: .env.sample  settings.py
